<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">海豚视频</string>
    <string name="start_text">电脑想了一个1–10000的数，猜猜是多少。</string>
    <string name="start">进入游戏</string>
    <string name="submit">提交</string>
    <string name="welcome">欢迎游玩猜大小</string>
    <string name="big">猜大了</string>
    <string name="small">猜小了</string>
    <string name="success">猜对了</string>
    <string name="restart">重新开始</string>
    <string name="restart_text">点击下面的按钮重新开始</string>
    <string name="defaultText">猜一个数</string>
    <string name="error">请输入数字</string>
    <string name="reset">已重置</string>
    <string name="video_cover">视频封面</string>
    <string name="video">视频</string>
    <string name="returns">返回</string>
    <string name="upload_video_hint">添加合适的话题和描述，最多50个字</string>
    <string name="person_introduction_hint">填写个人介绍更容易获得关注，点击此处添加，最多50个字</string>
    <string name="confirm">确 认</string>
    <string name="publish">发 布</string>
    <string name="take_photos">拍照获取</string>
    <string name="down_photos">下载图片</string>
    <string name="comment">评论</string>
    <string name="get_from_album">从相册获取</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="head_portrait">头像</string>
    <string name="log_out">退出登录</string>
    <string name="upload_video">上传视频</string>
    <string name="reward">打赏</string>
    <string name="home_page">首页</string>
    <string name="me">我</string>
    <string name="login_gold_coins">登录领金币</string>
    <string name="concern">关注</string>
    <string name="send_out">发送</string>
    <string name="find">发现</string>
    <string name="logo">logo</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="works">作品</string>
    <string name="follow">关注</string>
    <string name="zero">0</string>
    <string name="currently_not_logged">当前未登录</string>
    <string name="not_implemented">该功能未实现</string>
    <string name="support">支持</string>
    <string name="collection">收藏</string>
    <string name="register_and_login">注册并登录</string>
    <string name="set_user_information">设置用户信息</string>
    <string name="modify_personal_information">修改个人信息</string>
    <string name="complete">完成</string>
    <string name="username">海豚号：</string>
    <string name="input_username">请输入海豚名</string>
    <string name="introduction">点击添加介绍，让大家了解你</string>
    <string name="name">姓 名 ：</string>
    <string name="input_name">请输入姓名</string>
    <string name="nick">昵 称 ：</string>
    <string name="input_nick">请输入昵称</string>
    <string name="phone">电 话 ：</string>
    <string name="input_phone">请输入电话</string>
    <string name="introduce">介 绍 ：</string>
    <string name="set_introduce">设置个人介绍</string>
    <string name="birthday">生 日 ：</string>
    <string name="input_birthday" tools:ignore="TypographyDashes">2001.1.1</string>
    <string name="password">密 码 ：</string>
    <string name="input_password">请输入密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sex">性 别 ：</string>
    <string name="required">*</string>
    <string name="C">C</string>
    <string name="percent_sign">%</string>
    <string name="CE">CE</string>
    <string name="division_sign">÷</string>
    <string name="multiplication_sign">x</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="equal_sign">=</string>
    <string name="point_sign">.</string>
    <string name="zero_zero">00</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="calculator">计算器</string>
    <string name="comment_top_cancel">comment_top_cancel</string>
    <string name="delete">删除</string>
</resources>