<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/person_introduction_return"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/returns"
            android:src="@drawable/returns" />

        <TextView
            android:id="@+id/set_person_introduction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/set_introduce"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/complete_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@drawable/shape_5"
            android:text="@string/complete"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/person_introduction"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0.25"
        android:background="@drawable/shape_1"
        android:gravity="top"
        android:hint="@string/person_introduction_hint"
        android:maxLength="50"
        android:textColor="@color/black"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75" />
</LinearLayout>