<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/photograph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/take_photos"
        android:textSize="18sp"
        android:typeface="monospace"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/get_from_album"
        android:textSize="18sp"
        android:typeface="monospace"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#c0c0c0" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:typeface="monospace"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#c0c0c0" />
</LinearLayout>
